# devstack

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CODE_REVIEW.md  Cargo.toml  DESIGN-log-viewer-redesign.md  DESIGN-sse-perf-tasks.md  README.md  implementation_plan.md  openapi.json
.cargo/: config.toml  test-runner.sh
chains/: log-viewer-redesign.ts
devstack-dash/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
devstack-dash/public/: test-log-animation.html
devstack-dash/src/: main.tsx  styles.css
docs/: UX_AUDIT.md  UX_REDESIGN_VISION.md  cli-redesign.md  design-agent-mode.md  e2e-harness.md  performance-review-2026-03-17.md  refactor-plan.md
examples/: voice-stack.toml
scripts/: install-cli.sh
scripts/completions/: devstack.bash  devstack.fish  devstack.zsh
skills/devstack/: SKILL.md
skills/install-devstack/: SKILL.md
src/: agent.rs  api.rs  cli.rs  config.rs  daemon.rs  diagnose.rs  ids.rs  lib.rs  log_index.rs  logfmt.rs  logs.rs  main.rs  manifest.rs  openapi.rs  paths.rs  port.rs  projects.rs  readiness.rs  shim.rs  sources.rs  systemd.rs  tasks.rs  util.rs  watch.rs
src/agent/: auto_share.rs  command.rs  mod.rs  pty_proxy.rs
src/app/: context.rs  error.rs  handles.rs  mod.rs  runtime.rs
tests/: e2e_cli_smoke.rs  e2e_cli_ux.rs  e2e_core.rs  e2e_globals_projects_sources.rs  e2e_init_refresh_watch.rs  e2e_init_visibility.rs  e2e_log_eviction.rs  e2e_logs_tasks.rs  e2e_navigation_agent_gc.rs  e2e_ports.rs  e2e_readiness.rs  e2e_service_tasks_global_env.rs
ui/: caffeinate-daemon-install.sh
(+162 files in other folders)
