[package]
name = "devstack"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/robinwander/devstack"
description = "Local development orchestration with automatic port allocation, structured logs, and file watching"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
blake3 = "1.5.6"
clap = { version = "4.5.54", features = ["derive"] }
directories = "5.0.1"
dotenvy = "0.15.7"
glob = "0.3.3"
http-body-util = "0.1.3"
humantime = "2.1.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
hyperlocal = "0.9.1"
ignore = "0.4.23"
libc = "0.2.176"
memchr = "2"
minijinja = "2.14.0"
notify = "8.2.0"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tantivy = "0.25.0"
time = { version = "0.3.44", features = ["formatting", "local-offset", "parsing"] }
tokio = { version = "1.49.0", features = ["full"] }
pty-process = { version = "0.5.3", features = ["async"] }
toml = "0.8.23"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
urlencoding = "2.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.5"
systemd-zbus = "5.3.2"

[dev-dependencies]
tempfile = "3.23.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
